--- a/app/index.html
+++ b/app/index.html
@@ -157,9 +157,7 @@
         </button>
       </li>
     </ul>
-  </div>
-
-    
+  </div>    
 <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
   <symbol id="check" viewBox="0 0 16 16">
     <title>Check</title>
@@ -167,22 +165,68 @@
   </symbol>
 </svg>
 
+<div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+  <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-waves h-6 w-6 text-sky-600"><path d="M2 6c.6.5 1.2 1 2.5 1C7 7 7 5 9.5 5c2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"></path><path d="M2 12c.6.5 1.2 1 2.5 1 2.5 0 2.5-2 5-2 2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"></path><path d="M2 18c.6.5 1.2 1 2.5 1 2.5 0 2.5-2 5-2 2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"></path></svg>
+    <span class="fs-4">AquaParis</span>
+  </a>
+
+  <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Home</a>
+    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Facilities</a>
+    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Pricing</a>
+    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Contact</a>
+  </nav>
+</div>
+
+<section
+  id="home"
+  class="min-vh-100 d-flex align-items-center position-relative overflow-hidden"
+  style="
+    background-image: linear-gradient(rgba(3, 105, 161, 0.8), rgba(14, 165, 233, 0.7)), url('/pool-hero.jpg');
+    background-size: cover;
+    background-position: center;
+  "
+>
+  <div class="position-absolute bottom-0 start-0 end-0">
+    <!-- You'd need to replace the SVG wave with a Bootstrap-compatible approach -->
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="w-100">
+      <path
+        fill="#ffffff"
+        fill-opacity="1"
+        d="M0,96L48,117.3C96,139,192,181,288,181.3C384,181,480,139,576,138.7C672,139,768,181,864,181.3C960,181,1056,139,1152,122.7C1248,107,1344,117,1392,122.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+      ></path>
+    </svg>
+  </div>
+
+  <div class="container position-relative" style="z-index: 1;">
+    <div class="col-12 col-md-8 col-lg-6">
+      <h1 class="display-4 fw-bold text-white mb-4">
+        AquaParis with Crystal Clear Prices
+      </h1>
+      <p class="lead text-white-80 mb-5">
+        Swim in Paris for everyone.
+      </p>
+      <div class="d-flex flex-column flex-sm-row gap-3">
+        <a
+          href="#pricing"
+          class="btn btn-light btn-lg fw-semibold text-primary"
+        >
+          View Pricing <!-- Replace with appropriate icon or text -->
+        </a>
+        <a
+          href="#contact"
+          class="btn btn-outline-light btn-lg fw-semibold"
+        >
+          <!-- Replace with appropriate icon or text --> Contact Us
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
 <div class="container py-3">
   <header>
-    <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-waves h-6 w-6 text-sky-600"><path d="M2 6c.6.5 1.2 1 2.5 1C7 7 7 5 9.5 5c2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"></path><path d="M2 12c.6.5 1.2 1 2.5 1 2.5 0 2.5-2 5-2 2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"></path><path d="M2 18c.6.5 1.2 1 2.5 1 2.5 0 2.5-2 5-2 2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"></path></svg>
-        <span class="fs-4">AquaParis</span>
-      </a>
-
-      <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Home</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Facilities</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Pricing</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Contact</a>
-      </nav>
-    </div>
-
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
       <h1 class="display-4 fw-normal text-body-emphasis">Pricing</h1>
       <p class="fs-5 text-body-secondary">We offer different rates for in-city residents and visitors from outside the city.</p>
