✨ feat: remove header menu

--- a/app/index.html
+++ b/app/index.html
@@ -165,20 +165,6 @@
   </symbol>
 </svg>
 
-<div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-  <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-waves h-6 w-6 text-sky-600"><path d="M2 6c.6.5 1.2 1 2.5 1C7 7 7 5 9.5 5c2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"></path><path d="M2 12c.6.5 1.2 1 2.5 1 2.5 0 2.5-2 5-2 2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"></path><path d="M2 18c.6.5 1.2 1 2.5 1 2.5 0 2.5-2 5-2 2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"></path></svg>
-    <span class="fs-4">AquaParis</span>
-  </a>
-
-  <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Home</a>
-    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Facilities</a>
-    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Pricing</a>
-    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Contact</a>
-  </nav>
-</div>
-
 <section
   id="home"
   class="min-vh-100 d-flex align-items-center position-relative overflow-hidden"
@@ -199,13 +185,14 @@
     </svg>
   </div>
 
-  <div class="container position-relative" style="z-index: 1;">
+  <div class="container py-3" style="z-index: 1;">
     <div class="col-12 col-md-8 col-lg-6">
       <h1 class="display-4 fw-bold text-white mb-4">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-waves h-6 w-6 text-sky-600"><path d="M2 6c.6.5 1.2 1 2.5 1C7 7 7 5 9.5 5c2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"></path><path d="M2 12c.6.5 1.2 1 2.5 1 2.5 0 2.5-2 5-2 2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"></path><path d="M2 18c.6.5 1.2 1 2.5 1 2.5 0 2.5-2 5-2 2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"></path></svg>
         AquaParis with Crystal Clear Prices
       </h1>
       <p class="lead text-white-80 mb-5">
-        Swim in Paris for everyone.
+        Swim in Paris for everyone, at unbeatable prices
       </p>
       <div class="d-flex flex-column flex-sm-row gap-3">
         <a
@@ -226,13 +213,6 @@
 </section>
 
 <div class="container py-3">
-  <header>
-    <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-      <h1 class="display-4 fw-normal text-body-emphasis">Pricing</h1>
-      <p class="fs-5 text-body-secondary">We offer different rates for in-city residents and visitors from outside the city.</p>
-    </div>
-  </header>
-
   <main>
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
       <div class="col">
