✨ feat: dark mode wave

--- a/app/index.html
+++ b/app/index.html
@@ -184,16 +184,20 @@
     </symbol>
   </svg>
 
-  <section id="home" class="min-vh-100 d-flex align-items-center position-relative overflow-hidden" style="
-    background-image: linear-gradient(rgba(3, 105, 161, 0.8), rgba(14, 165, 233, 0.7)), url('/pool-hero.jpg');
-    background-size: cover;
-    background-position: center;
-  ">
+<section
+    id="home"
+    class="min-vh-100 d-flex align-items-center position-relative overflow-hidden"
+    style="
+      background-image: linear-gradient(rgba(3, 105, 161, 0.8), rgba(14, 165, 233, 0.7)), url('/pool-hero.jpg');
+      background-size: cover;
+      background-position: center;
+    "
+  >
     <div class="position-absolute bottom-0 start-0 end-0">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="w-100">
-        <path fill="#ffffff" fill-opacity="1"
-          d="M0,96L48,117.3C96,139,192,181,288,181.3C384,181,480,139,576,138.7C672,139,768,181,864,181.3C960,181,1056,139,1152,122.7C1248,107,1344,117,1392,122.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-        </path>
+        <path class="wave"
+          d="M0,96L48,117.3C96,139,192,181,288,181.3C384,181,480,139,576,138.7C672,139,768,181,864,181.3C960,181,1056,139,1152,122.7C1248,107,1344,117,1392,122.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
       </svg>
     </div>
 
