--- a/app/index.html
+++ b/app/index.html
@@ -345,51 +345,45 @@
 
 
     <div class="container" id="contact">
-      <div class="text-center mb-12">
-        <h2 class="text-3xl font-bold mb-4">Contact Us</h2>
-        <p class="text-muted-foreground max-w-2xl mx-auto">Have questions? Get in touch with our friendly team</p>
+      <div class="text-center mb-5">
+        <h2 class="h2 fw-bold mb-4">Contact Us</h2>
+        <p class="text-muted mx-auto" style="max-width: 600px;">Have questions? Get in touch with our friendly team</p>
       </div>
-
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-12 max-w-4xl mx-auto">
-        <div>
-          <div class="space-y-4">
-            <div class="flex items-start"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" class="lucide lucide-map-pin h-5 w-5 mr-3 text-sky-600 mt-0.5">
+    
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="mb-4">
+            <div class="d-flex align-items-start mb-3">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-primary me-3 mt-1">
                 <path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"></path>
                 <circle cx="12" cy="10" r="3"></circle>
               </svg>
               <div>
-                <h4 class="font-semibold">Address</h4>
-                <p class="text-muted-foreground">123 Splash Avenue, Watertown, CA 90210</p>
+                <h4 class="fw-semibold">Address</h4>
+                <p class="text-muted">123 Splash Avenue, Watertown, CA 90210</p>
               </div>
             </div>
-            <div class="flex items-start"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" class="lucide lucide-phone h-5 w-5 mr-3 text-sky-600 mt-0.5">
-                <path
-                  d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
-                </path>
+            <div class="d-flex align-items-start mb-3">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-primary me-3 mt-1">
+                <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
               </svg>
               <div>
-                <h4 class="font-semibold">Phone</h4>
-                <p class="text-muted-foreground">(555) 123-4567</p>
+                <h4 class="fw-semibold">Phone</h4>
+                <p class="text-muted">(555) 123-4567</p>
               </div>
             </div>
-            <div class="flex items-start"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" class="lucide lucide-mail h-5 w-5 mr-3 text-sky-600 mt-0.5">
+            <div class="d-flex align-items-start mb-3">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-primary me-3 mt-1">
                 <rect width="20" height="16" x="2" y="4" rx="2"></rect>
                 <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
               </svg>
               <div>
-                <h4 class="font-semibold">Email</h4>
-                <p class="text-muted-foreground">info@aquawavepools.com</p>
+                <h4 class="fw-semibold">Email</h4>
+                <p class="text-muted">info@aquawavepools.com</p>
               </div>
             </div>
-            <div class="flex items-start"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" class="lucide lucide-calendar-days h-5 w-5 mr-3 text-sky-600 mt-0.5">
+            <div class="d-flex align-items-start mb-3">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-primary me-3 mt-1">
                 <path d="M8 2v4"></path>
                 <path d="M16 2v4"></path>
                 <rect width="18" height="18" x="3" y="4" rx="2"></rect>
@@ -402,38 +396,45 @@
                 <path d="M16 18h.01"></path>
               </svg>
               <div>
-                <h4 class="font-semibold">Office Hours</h4>
-                <p class="text-muted-foreground">Monday - Friday: 9:00 AM - 5:00 PM</p>
+                <h4 class="fw-semibold">Office Hours</h4>
+                <p class="text-muted">Monday - Friday: 9:00 AM - 5:00 PM</p>
               </div>
             </div>
           </div>
         </div>
-        <div>
-          <h3 class="text-xl font-bold mb-6" id="buy">Send Us a Message</h3>
-          <form class="space-y-4">
-            <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-              <div class="space-y-2"><label for="name" class="text-sm font-medium">Name</label><input id="name"
-                  class="w-full p-2 border rounded-md" placeholder="Your name" required="" value=""></div>
-              <div class="space-y-2"><label for="email" class="text-sm font-medium">Email</label><input id="email"
-                  class="w-full p-2 border rounded-md" placeholder="Your email" required="" type="email" value=""></div>
+        <div class="col-md-6">
+          <h3 class="h3 fw-bold mb-4" id="buy">Send Us a Message</h3>
+          <form class="row g-3">
+            <div class="col-md-6">
+              <label for="name" class="form-label">Name</label>
+              <input type="text" id="name" class="form-control" placeholder="Your name" required>
             </div>
-            <div class="space-y-2"><label for="city" class="text-sm font-medium">City / Zip Code</label>
-              <div class="flex"><input id="city" class="w-full p-2 border rounded-l-md"
-                  placeholder="Your city or zip code" value=""><button
-                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 text-primary-foreground h-10 px-4 py-2 rounded-l-none bg-sky-600 hover:bg-sky-700"
-                  type="button">Check Fare</button></div>
+            <div class="col-md-6">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" id="email" class="form-control" placeholder="Your email" required>
             </div>
-            <div class="space-y-2"><label for="subject" class="text-sm font-medium">Subject</label><input id="subject"
-                class="w-full p-2 border rounded-md" placeholder="Subject" required="" value=""></div>
-            <div class="space-y-2"><label for="message" class="text-sm font-medium">Message</label><textarea
-                id="message" rows="4" class="w-full p-2 border rounded-md" placeholder="Your message"
-                required=""></textarea></div><button
-              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 text-primary-foreground h-10 px-4 py-2 w-full bg-sky-600 hover:bg-sky-700"
-              type="submit">Send Message</button>
+            <div class="col-12">
+              <label for="city" class="form-label">City / Zip Code</label>
+              <div class="input-group">
+                <input type="text" id="city" class="form-control" placeholder="Your city or zip code">
+                <button class="btn btn-primary" type="button">Check Fare</button>
+              </div>
+            </div>
+            <div class="col-12">
+              <label for="subject" class="form-label">Subject</label>
+              <input type="text" id="subject" class="form-control" placeholder="Subject" required>
+            </div>
+            <div class="col-12">
+              <label for="message" class="form-label">Message</label>
+              <textarea id="message" rows="4" class="form-control" placeholder="Your message" required></textarea>
+            </div>
+            <div class="col-12">
+              <button type="submit" class="btn btn-primary w-100">Send Message</button>
+            </div>
           </form>
         </div>
       </div>
-    </div>
+    </div>    
 
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
       <div class="row">
