📚 docs: contact information

--- a/app/index.html
+++ b/app/index.html
@@ -360,7 +360,7 @@
               </svg>
               <div>
                 <h4 class="fw-semibold">Address</h4>
-                <p class="text-muted">123 Splash Avenue, Watertown, CA 90210</p>
+                <p class="text-muted">12 Rue du Plouf, Paris 75012</p>
               </div>
             </div>
             <div class="d-flex align-items-start mb-3">
@@ -369,7 +369,7 @@
               </svg>
               <div>
                 <h4 class="fw-semibold">Phone</h4>
-                <p class="text-muted">(555) 123-4567</p>
+                <p class="text-muted">(+33) 1 12 00 12 00</p>
               </div>
             </div>
             <div class="d-flex align-items-start mb-3">
@@ -379,7 +379,7 @@
               </svg>
               <div>
                 <h4 class="fw-semibold">Email</h4>
-                <p class="text-muted">info@aquawavepools.com</p>
+                <p class="text-muted">info@aquaparis.fr</p>
               </div>
             </div>
             <div class="d-flex align-items-start mb-3">
