Fix: External visitors Book Now button href

--- a/app/index.html
+++ b/app/index.html
@@ -288,7 +288,7 @@
                   </svg>
                   All pools included</li>
               </ul>
-              <a href="" class="w-100 btn btn-lg btn-primary">Book now</a>
+              <a href="#buy" class="w-100 btn btn-lg btn-primary">Book now</a>
             </div>
           </div>
         </div>
